--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
-	<link rel="stylesheet" type="text/css" href="css/owl.transitions.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css"/>
 	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
@@ -284,14 +283,23 @@
 	</footer>
 	<!--  End Footer Section  -->
 
+	<script type="text/javascript">
+		var owlTransitions = document.createElement('link');
+		owlTransitions.rel = 'stylesheet';
+		owlTransitions.href = '../css/owl.transitions.css';
+		owlTransitions.type = 'text/css';
+		var godefer = document.getElementsByTagName('link')[0];
+		godefer.parentNode.insertBefore(giftofspeed, godefer);
+	</script>
+
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/ajaxchimp.js"></script>
 
-	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
-	<script type="text/javascript" src="js/wow.js"></script>
-	<script type="text/javascript" src="js/parallax.js"></script>
-	<script type="text/javascript" src="js/nicescroll.js"></script>
+	<script type="text/javascript" src="js/owl.carousel.min.js" async></script>
+	<script type="text/javascript" src="js/wow.js" async></script>
+	<script type="text/javascript" src="js/parallax.js" async></script>
+	<script type="text/javascript" src="js/nicescroll.js" async></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/scrollTo.js"></script>
+	<script type="text/javascript" src="js/scrollTo.js" async></script>
 </body>
 </html>
